--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -25,8 +25,6 @@
     /* grid-template-rows: auto 1fr auto; */ /* Header, content, footer */
     gap: 1rem;  /* Optional: space between columns */
     min-height: 100vh; /* Ensure body covers the full height of the viewport */
-    grid-column-start: 2;
-    grid-column-end: 12;
   }
 
   /* 4. Headings & Paragraphs */
@@ -109,6 +107,7 @@
     grid-row: 1;
     grid-column-start: 2;
     grid-column-end: 12;
+    justify-content: center;
   }
 
   main {
