Adjust my headshot picture on index.html using CSS on index.css

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -77,3 +77,8 @@
     /* border-radius: 3px; */ /* Optional: rounded corners for background highlight */
   }
   
+  .headshot {
+    width: 20%;
+    height: auto;
+    border-radius: 20%;
+  }
