--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,5 +1,5 @@
 /* === 1. Section Backgrounds for Cyberlab === */
-  main {
+  /*main {
     text-align: center;
   }
 
@@ -11,9 +11,9 @@
     text-align: left;
   }
 
-  main ol {
+  main ul {
     list-style: inside;
-  }
+  }*/
   
   /* === 2. Theme Colors (Red/Blue/Black) === */
   body {
@@ -21,8 +21,8 @@
     color: #f2f2f2; /* Light text for contrast */
   }
   
-  h1, h2 {
-    color: #db2e2e; /* Red for headers */
+  h1, h2, h3 {
+    color: #39FF14 /* Neon Green for headers */
   }
   
   a {
@@ -35,14 +35,15 @@
   }
   
   a:visited {
-    color: #9b59b6; /* Purple for visited links */
+    /* Purple for visited links */
+    color: #000000;
   }
 
-  /* After the revamp. */
+  /* CTA Button - Don't Delete or Change Except The Color */
   .button-cta {
     display: inline-block; /* Allows padding, margin, etc. */
-    background-color: greenyellow; /* Example: A nice blue */
-    color: rgb(11, 1, 1); /* Example: White text */
+    background-color: #39FF14; /* Example: A nice blue */
+    color: #FF00FF; /* Example: White text */
     padding: 10px 20px;
     text-decoration: none; /* Remove underline */
     border-radius: 5px; /* Slightly rounded corners */
