--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -21,17 +21,13 @@
     color: #f2f2f2; /* Light text for contrast */
   }
   
-  a {
-    color: inherit; /* Inherit text color from parent */
+  main a {
+    color: #39FF14; /* Inherit text color from parent */
     transition: color 0.3s ease; /* Smooth transition for links */
   }
   
   a:hover {
     color: #ff4d4d; /* Lighter red on hover */
-  }
-  
-  a:visited {
-    color: #9b59b6; /* Purple for visited links */
   }
   
   main {
@@ -40,12 +36,12 @@
 
   main h1 {
     text-align: center;
-    color: greenyellow;
+    color: #39FF14; /* Neon Green */
   }
 
   main h2 {
     text-align: center;
-    color: greenyellow;
+    color: #00FFFF; /* Electric Blue */
   }
 
   main h3 {
@@ -55,9 +51,17 @@
 
   main h4 {
     text-align: center;
-    color: beige;
+    color: #FD3DB5; /* Neon Yellow #FFD700 */
+  }
+
+  .cert-card {
+    text-align: center;
   }
 
   main li{
     list-style: inside;
+  }
+
+  main strong {
+    color: gold;
   }
